<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TituloApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/Titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textSize="24sp"
        tools:text="@string/Titulo" />

    <TextView
        android:id="@+id/camara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camara" />

    <TextView
        android:id="@+id/huella"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/huella" />

    <TextView
        android:id="@+id/bluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth" />
    <TextView
        android:id="@+id/call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button2" />


</LinearLayout>